# a2a-registry

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.prod  EXAMPLES_SUMMARY.md  INSTALLATION.md  LICENSE  Makefile  PRE_COMMIT_SETUP.md  PRODUCTION.md  PUBLISHING.md  QUALITY_CHECKS.md  README.md  SECURITY.md  UI_REFACTOR_SUMMARY.md  activate_env.sh  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod  env.test  mypy.ini  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  quality_check.py  quality_check.sh  requirements-dev.txt  requirements-optional.txt  requirements-prod.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  (+1 more)
alembic/: env.py
app/: __init__.py  auth.py  auth_jwks.py  config.py  database.py  main.py
docs/: AGENT_CARD_SCHEMA.md  AGENT_PUBLISHING.md  API_DOCUMENTATION.md  SDK_REFERENCE.md
frontend/: DEVELOPMENT.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: backup.sh  deploy.sh  init-db.sql  init_db.py  restore.sh  test-production.sh
tests/: __init__.py  base_test.py  conftest.py  test_agents.py  test_agents_api.py  test_auth_api.py  test_auth_jwks.py  test_auth_service.py  test_health_api.py  test_models.py  test_registry_service.py  test_schemas.py  test_search_index_service.py  test_security.py  test_well_known_api.py
(+127 files in other folders)
